--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ jobs:
         build_type: [RelWithDebInfo, Debug]
         enable_ui: [off]
         include:
-          - os: ubuntu-latest
-            build_type: Debug
+          - os: macos-latest
+            build_type: RelWithDebInfo
             enable_ui: on
     steps:
     - uses: actions/checkout@v4
