--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
         build_type: [RelWithDebInfo, Debug]
-        enable_ui: [off]
+        enable_ui: [on]
         include:
           - os: macos-latest
             build_type: RelWithDebInfo
