--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,11 +6,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest]
+        os: [windows-latest, macos-latest, ubuntu-latest]
         build_type: [RelWithDebInfo]
         enable_ui: [on]
         include:
-          - os: macos-latest
+          - os: windows-latest
             build_type: RelWithDebInfo
             enable_ui: on
     steps:
@@ -59,5 +59,5 @@ jobs:
       with:
         name: aseprite
         path: |
-          D:/a/aseprite/aseprite/build/bin/data
-          D:/a/aseprite/aseprite/build/bin/aseprite
+          /Users/wang/Downloads/aseprite/build/bin/data
+          /Users/wang/Downloads/aseprite/build/bin/aseprite.exe
