--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,12 +45,20 @@ jobs:
         else
           export enable_ccache=on
         fi
-        cmake -S . -B build -G Ninja \
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-          -DCMAKE_OSX_DEPLOYMENT_TARGET=10.9 \
-          -DENABLE_TESTS=ON \
-          -DENABLE_UI=${{ matrix.enable_ui }} \
-          -DENABLE_CCACHE=$enable_ccache
+          cmake -S . -B build -G Ninja \
+            -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+            -DCMAKE_OSX_ARCHITECTURES=arm64 \
+            -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0 \
+            -DCMAKE_OSX_SYSROOT=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk \
+            -DLAF_BACKEND=skia \
+            -DSKIA_DIR=/Users/skia \
+            -DSKIA_LIBRARY_DIR=/Users/skia/out/Release-arm64 \
+            -DSKIA_LIBRARY=/Users/skia/out/Release-arm64/libskia.a \
+            -DPNG_ARM_NEON:STRING=on \
+            -G Ninja \
+            ..
+            ninja aseprite
+          /cmake
     - name: Compiling
       shell: bash
       run: |
