--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,5 +59,5 @@ jobs:
       with:
         name: aseprite
         path: |
-          /Users/wang/Downloads/aseprite/build/bin/data
-          /Users/wang/Downloads/aseprite/build/bin/aseprite.app
+          D:/a/aseprite/aseprite/build/bin/data
+          D:/a/aseprite/aseprite/build/bin/aseprite.exe
